--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+          <groupId>org.xerial.snappy</groupId>
+          <artifactId>snappy-java</artifactId>
+          <version>1.1.0-M3</version>
+        </dependency>
     </dependencies>
 
     <build>
