--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
     <repositories>
         <repository>
             <id>gradientx-release-repo</id>
-            <url>http://prod-artifactory001.pe1i.gradientx.com:8081/artifactory/libs-release</url>
+            <url>http://artifactory.gradientx.com:8081/artifactory/libs-release</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
@@ -51,7 +51,7 @@
         </repository>
         <repository>
             <id>gradientx-snapshot-repo</id>
-            <url>http://prod-artifactory001.pe1i.gradientx.com:8081/artifactory/libs-snapshot</url>
+            <url>http://artifactory.gradientx.com:8081/artifactory/libs-snapshot</url>
             <releases>
                 <enabled>false</enabled>
             </releases>
@@ -63,7 +63,7 @@
     <pluginRepositories>
         <pluginRepository>
             <id>gradientx-plugins-release-repo</id>
-            <url>http://prod-artifactory001.pe1i.gradientx.com:8081/artifactory/plugins-release</url>
+            <url>http://artifactory.gradientx.com:8081/artifactory/plugins-release</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
@@ -73,7 +73,7 @@
         </pluginRepository>
         <pluginRepository>
             <id>gradientx-plugins-snapshot-repo</id>
-            <url>http://prod-artifactory001.pe1i.gradientx.com:8081/artifactory/plugins-snapshot</url>
+            <url>http://artifactory.gradientx.com:8081/artifactory/plugins-snapshot</url>
             <releases>
                 <enabled>false</enabled>
             </releases>
@@ -86,12 +86,12 @@
         <repository>
             <id>gradientx-release-repo</id>
             <name>Gradient X Release Repository</name>
-            <url>http://prod-artifactory001.pe1i.gradientx.com:8081/artifactory/libs-release-local</url>
+            <url>http://artifactory.gradientx.com:8081/artifactory/libs-release-local</url>
         </repository>
         <snapshotRepository>
             <id>gradientx-snapshot-repo</id>
             <name>Gradient X Snapshot Repository</name>
-            <url>http://prod-artifactory001.pe1i.gradientx.com:8081/artifactory/libs-snapshot-local</url>
+            <url>http://artifactory.gradientx.com:8081/artifactory/libs-snapshot-local</url>
         </snapshotRepository>
     </distributionManagement>
 
