--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
         </repository>
         <repository>
             <id>gradientx-snapshot-repo</id>
-            <url>http://artifactory.gradientx.com:8081/artifactory/libs-snapshot</url>
+            <url>http://stage-artifactory001.ae1i.gradientx.com:8081/artifactory/libs-snapshot</url>
             <releases>
                 <enabled>false</enabled>
             </releases>
@@ -73,7 +73,7 @@
         </pluginRepository>
         <pluginRepository>
             <id>gradientx-plugins-snapshot-repo</id>
-            <url>http://artifactory.gradientx.com:8081/artifactory/plugins-snapshot</url>
+            <url>http://stage-artifactory001.ae1i.gradientx.com:8081/artifactory/plugins-snapshot</url>
             <releases>
                 <enabled>false</enabled>
             </releases>
@@ -91,7 +91,7 @@
         <snapshotRepository>
             <id>gradientx-snapshot-repo</id>
             <name>Gradient X Snapshot Repository</name>
-            <url>http://artifactory.gradientx.com:8081/artifactory/libs-snapshot-local</url>
+            <url>http://stage-artifactory001.ae1i.gradientx.com:8081/artifactory/libs-snapshot-local</url>
         </snapshotRepository>
     </distributionManagement>
 
