--- a/pom.xml
+++ b/pom.xml
@@ -95,11 +95,6 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>commons-logging</groupId>
-      <artifactId>commons-logging</artifactId>
-      <version>1.1.1</version>
-    </dependency>
-    <dependency>
       <groupId>args4j</groupId>
       <artifactId>args4j</artifactId>
       <version>2.0.16</version>
@@ -112,6 +107,11 @@
     <dependency>
     	<groupId>org.slf4j</groupId>
     	<artifactId>log4j-over-slf4j</artifactId>
+    	<version>1.7.7</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.slf4j</groupId>
+    	<artifactId>jcl-over-slf4j</artifactId>
     	<version>1.7.7</version>
     </dependency>
   </dependencies>
